# Echo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: allocation.h  analyzer.h  metaobject.h  object.h  opcode.h  result.h  stringset.h  token.h  util.h
sample/: sample1.echo  sample1.out.default  sample1_test.out.default  sample2.echo  sample2.out.default  sample2_test.out.default  sample3.echo  sample3.out.default  sample3_test.out.default
src/: executor.h  interpreter.h  main.cpp  objectmanager.h
src/parser/: parser.h  parser_base.h  parser_controlflow.h  parser_definition.h  parser_expr.h  parser_inout.h  parser_literal.h  parser_object.h  parser_type.h
src/test/: test.cpp  testutil.h
windows/: Echo.sln  Echo.vcxproj  Echo.vcxproj.filters  PropertySheet.props
windows/OpcodeGenerator/: OpcodeGenerator.vcxproj  OpcodeGenerator.vcxproj.filters
